--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ clap = "2.33.3"
 xdg = "^2.1"
 toml = "0.5.3"
 serde = { version = "1.0.118", features = ["derive"] }
+rpassword = "5.0.0"
+rprompt = "1.0.5"
+rand = "0.8.0"
+base64 = "0.13.0"
+rust-crypto = "^0.2"
